--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,7 +1,24 @@
 {
-  
+   "Bienvenidos" : "Bienvenidos",
+   "Conoce lo mejor en repuestos": "Conoce lo mejor en repuestos",
+   "lubricantes, motores y mas" : "lubricantes, motores y mas",
+   "¿Que desea buscar?" : "¿Que desea buscar?",
+   "VER MAS" : "VER MAS",
+   "Ver mas" : "Ver mas",
      "motors" : "Motores",
+     "Repuestos" : "Repuestos",
+     "Accesorios" : "Accesorios",
+     "Lubricantes" : "Lubricantes",
     "nombre" : "NOMBRE",
+    "PRECIO" : "PRECIO",
     "Sign-in" : "Registrarse",
-    "Log-in" : "Iniciar Sesión"
+    "Log-in" : "Iniciar Sesión",
+    "Start" : "Inicio",
+    "Offers" : "Ofertas",
+    "Contacts" : "Contactos" ,
+    "footer" : {
+        "Follow-us" : "SIGUENOS",
+        "Todos-los-Derechos-Reservados" : "Todos los Derechos Reservados",
+        "SOBRE NOSOTROS" : "SOBRE NOSOTROS"
+    }
 }
